manifest/objects/QCLiveChecks__AIFindings__c.object
<CustomObject>
    <description>AI findings</description>
    <fields>
        <fullName>QCLiveChecks__CECreatedById__c</fullName>
        <description>Id of the user who created the element</description>
        <inlineHelpText>Id of the user who created the element</inlineHelpText>
        <label>CECreatedById</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CECreatedOn__c</fullName>
        <description>Date when the element was created</description>
        <inlineHelpText>Date when the element was created</inlineHelpText>
        <label>CECreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CEUpdatedById__c</fullName>
        <description>Configuration element updated by</description>
        <inlineHelpText>Configuration element updated by</inlineHelpText>
        <label>CEUpdatedById</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CEUpdatedOn__c</fullName>
        <description>DAte when the element was modified</description>
        <label>CEUpdatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AI Finding</label>
    <nameField>
        <label>AI Findings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>